--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 50px;
   background-color: #1877f2;
+  z-index: 999;
 }
 
 .topbarLeft {
@@ -71,7 +72,7 @@
   position: relative;
 }
 
-.topbarIconBadge{
+.topbarIconBadge {
   width: 15px;
   height: 15px;
   background-color: red;
